# cybulde-model

./: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
cybulde/: __init__.py  generate_final_config.py  launch_job_on_gcp.py  run_tasks.py  tests.py
cybulde/configs/automatically_generated/: config.yaml  full_config_header.yaml
cybulde/configs_schemas/: base_schemas.py  config_schema.py  data_module_schemas.py  transformation_schemas.py
cybulde/configs_schemas/evaluation/: evaluation_lightning_module_schemas.py  evaluation_task_schemas.py  model_selector_schemas.py
cybulde/configs_schemas/infrastructure/: infrastructure_schema.py  instance_group_creator_schemas.py  instance_template_creator_schemas.py
cybulde/configs_schemas/models/: adapter_schemas.py  backbone_schemas.py  head_schemas.py  model_schemas.py  transformation_schemas.py
cybulde/configs_schemas/trainer/: callbacks_schemas.py  logger_schemas.py  trainer_schemas.py
cybulde/configs_schemas/training/: loss_schemas.py  optimizer_schemas.py  scheduler_schemas.py  training_lightning_module_schemas.py  training_task_schemas.py
cybulde/data_modules/: data_modules.py  datasets.py  transformations.py
cybulde/evaluation/: model_selector.py
cybulde/evaluation/lightning_modules/: bases.py  binary_text_evaluation.py
cybulde/evaluation/tasks/: bases.py  common_evaluation_task.py
cybulde/models/: adapters.py  backbones.py  heads.py  models.py
cybulde/models/common/: exporter.py  io_utils.py  utils.py
cybulde/training/: loss_functions.py  schedulers.py  shedulers.py
cybulde/training/lightning_modules/: bases.py  binary_text_classification.py
cybulde/training/tasks/: bases.py  common_training_task.py  tar_model_exporting_training_task.py
cybulde/utils/: config_utils.py  io_utils.py  mlflow_utils.py  torch_utils.py
docker/: Dockerfile
docker/scripts/: startup-script.sh
mlruns/0/: meta.yaml
scripts/vm_startup/: task_runner_startup_script.sh
(+45 files in other folders)
